cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificUnaryExprsCheckLevel1.cif.check.err
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel1.cif": Semantic warning at line 15, column 1: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel1.cif": Semantic warning at line 19, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel1.cif": Semantic warning at line 25, column 5: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificUnaryExprsCheckLevel1.cif": Semantic warning at line 38, column 3: Duplicate state invariant.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ---------------------------------------------------------
  (1/4) Unary operator "+" is used on a real typed operand.
  ---------------------------------------------------------
   * In group "PLUS_REALS":
     - invariant 1.0 = +1.0;
                       ^

  -------------------------------------------------------------
  (2/4) Unary operator "+" is used on an integer typed operand.
  -------------------------------------------------------------
   * In group "PLUS_INTS_RANGED":
     - invariant 1 = +1;
                     ^
   * In automaton "PLUS_INTS_RANGELESS":
     - invariant v = +v;
                     ^

  ---------------------------------------------------------
  (3/4) Unary operator "-" is used on a real typed operand.
  ---------------------------------------------------------
   * In group "NEGATE_INTS_REALS":
     - invariant 1.0 = -1.0;
                       ^

  -------------------------------------------------------------
  (4/4) Unary operator "-" is used on an integer typed operand.
  -------------------------------------------------------------
   * In group "NEGATE_INTS_RANGED":
     - invariant 1 = -1;
                     ^
   * In automaton "NEGATE_INTS_RANGELESS":
     - invariant v = -v;
                     ^
